[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch-hfl"
version = "1.1.4"
description = "Hierarchical Federated Learning with PyTorch and Flower with timing logs"
license = { file = "LICENSE" }
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "datasets>=2.0.0",
    "matplotlib>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytorchexample"]

[tool.hatch.build]
include = [
    "pytorchexample/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "run_fixed.ps1",
]

[tool.hatch.build.targets.sdist]
include = [
    "pytorchexample/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "run_fixed.ps1",
]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]

warmup-rounds = 1
num-supernodes = 10
num-evaluate-clients = 0
local-epochs = 1
learning-rate = 0.1
batch-size = 32
log-dir = "logs"

num-selected-clients = 10
num-server-rounds = 12
num-executions = 5
num-edges = 5
